--- a/index.html
+++ b/index.html
@@ -463,6 +463,7 @@
                 <a href="#" class="nav-item" onclick="showSection('community')">Community</a>
                 <a href="#" class="nav-item" onclick="showSection('roadmap')">Roadmap</a>
                 <a href="#" class="nav-item" onclick="showSection('contact')">Contact</a>
+                <a href="wiki.html" class="nav-item">Wiki</a>
             </div>
         </div>
     </nav>
@@ -858,3 +859,4 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96bb3a4884fb22f4',t:'MTc1NDYxNjQwOC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
