--- a/wiki.html
+++ b/wiki.html
@@ -301,7 +301,7 @@
 
                     <h2 id="the-origin-story">🎬 The Origin Story</h2>
                     
-                    <p>The idea for <strong>My Mixtape</strong> was born from a simple frustration: <em>modern video streaming, although useful, can sometimes feel repetitive and cold/em>. While we have access to millions of movies and TV series, we've lost that crafty touch, the curation, that true nostalgic feel of cable TV and your handy VCR and the feel of creating awesome Mixtapes.</p>
+                    <p>The idea for <strong>My Mixtape</strong> was born from a simple frustration: <em>modern video streaming, although useful, can sometimes feel repetitive and cold</em>. While we have access to millions of movies and TV series, we've lost that crafty touch, the curation, that true nostalgic feel of cable TV and your handy VCR and the feel of creating awesome Mixtapes.</p>
 
                     <p>The creator realized that even with access to Netflix, Hulu, and Disney+, we’d lost the true TV-watching experience — the kind where you sink into the couch after a long day and get The Simpsons, Family Guy, and Futurama all in a row. Instead, modern streaming left us binging the same show for hours, missing that mix-and-surprise magic.</p>
 
@@ -569,3 +569,4 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96bc6bf33752f4e8',t:'MTc1NDYyODkyOC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
