--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                         <span class="feature-icon">💬</span>
                         <h3>Discord Community</h3>
                         <p>Join our Discord server to chat with other users, share playlist recommendations, get support, and stay updated on development progress.</p>
-                        <a href="#" class="cta-button" style="margin-top: 15px; font-size: 1rem; padding: 10px 20px;">Join Discord</a>
+                        <a href="https://discord.gg/h6WdsZTHE2" target="_blank" rel="noopener noreferrer" class="cta-button" style="margin-top: 15px; font-size: 1rem; padding: 10px 20px;">Join Discord</a>
                     </div>
                     
                     <div class="feature-card">
@@ -859,4 +859,5 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96bb3a4884fb22f4',t:'MTc1NDYxNjQwOC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
