feat: Implement user profile and authentication

--- a/mixtape_site/contact.html
+++ b/mixtape_site/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mymixtape.online - Wiki</title>
+    <title>mymixtape.online - Contact Us</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
@@ -50,10 +50,15 @@
         </div>
     </nav>
     <main class="container">
-        <section id="wiki" class="section">
-            <h2>Wiki & Documentation</h2>
-            <p>Your guide to creating, sharing, and experiencing video mixtapes.</p>
-            <!-- Content will be dynamically loaded here or link to a dedicated wiki page -->
+        <section id="contact" class="section">
+            <h2>Contact Us</h2>
+            <p>Have a question, suggestion, or just want to say hi? Drop us a line!</p>
+            <form class="contact-form">
+                <input type="text" placeholder="Your Name" required>
+                <input type="email" placeholder="Your Email" required>
+                <textarea placeholder="Your Message" rows="5" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
         </section>
     </main>
     <footer>
