--- a/mixtape_site/download.html
+++ b/mixtape_site/download.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mymixtape.online - Wiki</title>
+    <title>mymixtape.online - Download</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
@@ -50,10 +50,18 @@
         </div>
     </nav>
     <main class="container">
-        <section id="wiki" class="section">
-            <h2>Wiki & Documentation</h2>
-            <p>Your guide to creating, sharing, and experiencing video mixtapes.</p>
-            <!-- Content will be dynamically loaded here or link to a dedicated wiki page -->
+        <section id="download-app" class="section">
+            <h2>Download the Mixtape App</h2>
+            <p>Get the full VR experience. Available for major VR platforms.</p>
+            <div class="download-buttons">
+                <a href="#" class="cta-button">Download for Headset 1</a>
+                <a href="#" class="cta-button">Download for Headset 2</a>
+            </div>
+        </section>
+        <section id="download-ext" class="section">
+            <h2>Get the Browser Extension</h2>
+            <p>Clip your favorite video moments from around the web.</p>
+            <a href="#" class="cta-button">Install for Your Browser</a>
         </section>
     </main>
     <footer>
