--- a/mixtape_site/features.html
+++ b/mixtape_site/features.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mymixtape.online - Wiki</title>
+    <title>mymixtape.online - Features</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
@@ -50,10 +50,26 @@
         </div>
     </nav>
     <main class="container">
-        <section id="wiki" class="section">
-            <h2>Wiki & Documentation</h2>
-            <p>Your guide to creating, sharing, and experiencing video mixtapes.</p>
-            <!-- Content will be dynamically loaded here or link to a dedicated wiki page -->
+        <section id="features" class="section">
+            <h2>Features</h2>
+            <div class="features-grid">
+                <div class="feature-card">
+                    <h3>Create Your Mixtape</h3>
+                    <p>Use our browser extension to clip moments from your favorite streaming services.</p>
+                </div>
+                <div class="feature-card">
+                    <h3>Design Your Tape</h3>
+                    <p>Customize your VHS tape with unique labels and artwork.</p>
+                </div>
+                <div class="feature-card">
+                    <h3>Explore VR Showrooms</h3>
+                    <p>Browse your collection and others\' in a virtual reality VHS store.</p>
+                </div>
+                <div class="feature-card">
+                    <h3>Share with Friends</h3>
+                    <p>Share your mixtapes with friends and relive the memories together.</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
