--- a/mixtape_site/index.html
+++ b/mixtape_site/index.html
@@ -52,8 +52,52 @@
     <main class="container">
         <section id="hero">
             <h2>Create, Share, and Relive Your Favorite Moments</h2>
-            <p>mymixtape.online lets you curate video mixtapes from your favorite streaming services and experience them in a virtual reality VHS store. It\'s a nostalgic trip back to the future of entertainment.</p>
+            <p>mymixtape.online lets you curate video mixtapes from your favorite streaming services and experience them in a virtual reality VHS store. It's a nostalgic trip back to the future of entertainment.</p>
             <a href="download.html" class="cta-button">Get Started Now</a>
+        </section>
+        <section id="features" class="section">
+            <h2>Features</h2>
+            <div class="features-grid">
+                <div class="feature-card">
+                    <h3>Create Your Mixtape</h3>
+                    <p>Use our browser extension to clip moments from your favorite streaming services.</p>
+                </div>
+                <div class="feature-card">
+                    <h3>Design Your Tape</h3>
+                    <p>Customize your VHS tape with unique labels and artwork.</p>
+                </div>
+                <div class="feature-card">
+                    <h3>Explore VR Showrooms</h3>
+                    <p>Browse your collection and others' in a virtual reality VHS store.</p>
+                </div>
+                <div class="feature-card">
+                    <h3>Share with Friends</h3>
+                    <p>Share your mixtapes with friends and relive the memories together.</p>
+                </div>
+            </div>
+        </section>
+        <section id="download-app" class="section">
+            <h2>Download the Mixtape App</h2>
+            <p>Get the full VR experience. Available for major VR platforms.</p>
+            <div class="download-buttons">
+                <a href="#" class="cta-button">Download for Headset 1</a>
+                <a href="#" class="cta-button">Download for Headset 2</a>
+            </div>
+        </section>
+        <section id="download-ext" class="section">
+            <h2>Get the Browser Extension</h2>
+            <p>Clip your favorite video moments from around the web.</p>
+            <a href="#" class="cta-button">Install for Your Browser</a>
+        </section>
+        <section id="contact" class="section">
+            <h2>Contact Us</h2>
+            <p>Have a question, suggestion, or just want to say hi? Drop us a line!</p>
+            <form class="contact-form">
+                <input type="text" placeholder="Your Name" required>
+                <input type="email" placeholder="Your Email" required>
+                <textarea placeholder="Your Message" rows="5" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
         </section>
     </main>
     <footer>
